<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@android:drawable/ic_input_add"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_library"
        android:icon="@android:drawable/ic_menu_sort_by_size"
        android:title="@string/nav_library" />
    <item
        android:id="@+id/nav_favorites"
        android:icon="@android:drawable/btn_star_big_on"
        android:title="@string/nav_favorites" />
    <item
        android:id="@+id/nav_memory"
        android:icon="@android:drawable/ic_menu_recent_history"
        android:title="@string/nav_memory" />
    <item
        android:id="@+id/nav_explore"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/nav_explore" />
</menu>
